removed has selector for browser incompatibility

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ hr {
   border-right: 1px solid #F06622;
 }
 
-.hamburger-menu {
+.hamburger-menu, #hamburger-checkbox {
   display: flex;
   flex-direction: column;
   gap: var(--hamburger-gap);
@@ -146,7 +146,7 @@ hr {
 }
 
 .hamburger-menu::before,
-.hamburger-menu input,
+#hamburger-checkbox,
 .hamburger-menu::after {
   content: "";
   width: var(--bar-width);
@@ -156,27 +156,36 @@ hr {
   transition: var(--animation-timing);
 }
 
-.hamburger-menu input {
+.hamburger-menu::before {
+  transform: translateY(-13px);
+}
+
+.hamburger-menu {
+  padding-top: 15px;
+}
+
+#hamburger-checkbox {
   appearance: none;
   padding: 0;
   margin: 0;
   outline: none;
   pointer-events: none;
+  transform: translateY(15px);
 }
 
-.hamburger-menu input:checked {
+#hamburger-checkbox:checked {
   opacity: 0;
   width: 0;
   background-color: #ffffff;
 }
 
-.hamburger-menu:has(input:checked)::before {
-  transform: rotate(-45deg) translate(-9px, 10px);
+.mobile-nav input:checked ~ .hamburger-menu::before  {
+  transform: rotate(-45deg) ;
   background-color: #ffffff;
 }
 
-.hamburger-menu:has(input:checked)::after {
-  transform: rotate(45deg) translate(-9px, -11px);
+.mobile-nav input:checked ~ .hamburger-menu::after {
+  transform: rotate(45deg) translate(-10px, -10px);
   background-color: #ffffff;
 }
 
@@ -206,7 +215,7 @@ hr {
   margin-bottom: 5rem;
 }
 
-.hamburger-menu:has(input:checked) + .mobile-nav-link {
+.mobile-nav input:checked ~ .mobile-nav-link {
   left: 0;
 }
 
